Convert to gradle kotlin build script